:art: changed the similar classnames text for components in the investment page to stop style overlap

--- a/client/src/style/invest-comp-4.css
+++ b/client/src/style/invest-comp-4.css
@@ -16,7 +16,7 @@
     height: auto;
   }
   
-.text {
+.text-a {
     display: flex;
     flex-direction: column;
 }
