--- a/client/src/style/invest-comp-5.css
+++ b/client/src/style/invest-comp-5.css
@@ -17,16 +17,17 @@
     border-radius: 20px;
   }
   
-.text {
+.text-b {
     display: flex;
     flex-direction: column;
+    color: black;
 }
 
-.text h1 {
+.text-b h1 {
     font-weight: normal;
     font-size: 40px;
 }
 
-.text p {
+.text-b p {
     font-size: 18px;
 }
