--- a/client/src/style/invest-comp-6.css
+++ b/client/src/style/invest-comp-6.css
@@ -17,17 +17,18 @@
     border-radius: 20px;
   }
   
-.text {
+.text-c {
     display: flex;
     flex-direction: column;
+    color: #000;
 }
 
-.text h1 {
+.text-c h1 {
     font-weight: normal;
     font-size: 40px;
 }
 
-.text p {
+.text-c p {
     font-size: 18px;
 }
 
